--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "polymer": "Polymer/polymer#~0.5.2",
     "core-icons": "Polymer/core-icons#~0.5.2",
     "core-elements": "Polymer/core-elements#~0.5.2",
-    "paper-elements": "Polymer/paper-elements#~0.5.2"
+    "paper-elements": "Polymer/paper-elements#~0.5.2",
+    "bootstrap": "~3.3.1"
   }
 }
