--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "homepage": "https://github.com/gund/auction",
   "authors": [
-    "Artur <oleonortt@gmail.com>"
+    "Artur <oleonortt@gmail.com>, Alex Malkevich <malkevich.alex@gmail.com>"
   ],
   "description": "--",
   "main": "index.html",
@@ -19,7 +19,6 @@
     "polymer": "Polymer/polymer#~0.5.2",
     "core-icons": "Polymer/core-icons#~0.5.2",
     "core-elements": "Polymer/core-elements#~0.5.2",
-    "paper-elements": "Polymer/paper-elements#~0.5.2",
-    "bootstrap": "~3.3.1"
+    "paper-elements": "Polymer/paper-elements#~0.5.2"
   }
 }
